# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  cc-test-reporter  copy_from_replit.py  coverage.xml  gendiff.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  tests.yml
gendiff/: __init__.py  args_parser.py  cli.py  dicts_diff.py  diff_maker.py  gendiff.py  make_diff.py  pars.py  parser.py
gendiff/formatters/: __init__.py  formatter.py  json.py  plain.py  stylish.py
gendiff/modules/: generate_diff.py  pars.py
gendiff/modules/formatters/: json.py
gendiff/scripts/: gendiff.py
gendiff/tests/: generate_diff_test.py
gendiff/tests/fixtures/: file_yml1.yml
gendifff/modules/: formatters.py  generate_diff.py  make_diff.py  pars.py
gendifff/modules/formatters/: json.py  plain.py  stylish.py
gendifff/scripts/: gendiff.py
gendifff/tests/: generate_diff_test.py
gendifff/tests/fixtures/: file_yml2.yml  result_json.txt
tests/: __init__.py  generate_diff_test.py  test_generate_diff.py
tests/fixtures/: plain_filepath2.yaml  result_json.txt
