[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["notsoyoungg <p.sergey1997@mail.ru>"]
packages = [
	{ include = 'gendifff' },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
PyYAML = "^6.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gendiff = 'gendifff.scripts.gendiff:main'

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
